--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,13 @@
     "ext-simplexml": "*",
     "ext-zip": "*",
     "alibabacloud/client": "^1.5",
+    "alibabacloud/sdk": "^1.8",
     "barryvdh/laravel-snappy": "^0.4.3",
     "brick/math": "^0.8.15",
     "fideloper/proxy": "^4.0",
+    "gzdsx/alipay-sdk": "^1.1",
+    "gzdsx/openai": "^1.0",
+    "gzdsx/sms-sdk": "^1.0",
     "intervention/image": "^2.4",
     "jenssegers/agent": "^2.6",
     "jpush/jpush": "^3.6",
@@ -32,14 +36,12 @@
     "lcobucci/jwt": "3.3.3",
     "maatwebsite/excel": "^3.0",
     "mews/captcha": "^3.0",
-    "orhanerday/open-ai": "^4.7",
     "overtrue/laravel-pinyin": "^4.0",
     "overtrue/laravel-wechat": "^5.0",
     "predis/predis": "^1.1",
     "simplesoftwareio/simple-qrcode": "^2.0",
     "tencentcloud/tencentcloud-sdk-php": "^3.0",
-    "tucker-eric/eloquentfilter": "^2.2",
-    "xy113/alipay": "^1.0"
+    "tucker-eric/eloquentfilter": "^2.2"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^2.7",
