--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     "lcobucci/jwt": "3.3.3",
     "maatwebsite/excel": "^3.0",
     "mews/captcha": "^3.0",
+    "orhanerday/open-ai": "^4.7",
     "overtrue/laravel-pinyin": "^4.0",
     "overtrue/laravel-wechat": "^5.0",
     "predis/predis": "^1.1",
